<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.caijinzhu.logindemo.MainActivity">


    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginTop="70dp"
        />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        android:layout_marginTop="10dp"
        android:hint="@string/loigin_user"

        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        android:hint="@string/login_password"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_title"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:background="#00ffff"
        />
    <Button
        android:id="@+id/button_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_forget"
        android:textAllCaps="false"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        />
    <Button
        android:id="@+id/button_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/login_buttion_regist"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintRight_toRightOf="parent"

        />
    <TextView
        android:id="@+id/tv_other_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_otherSytle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        />
    <ImageView
        android:id="@+id/iv_qq"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon3"
        app:layout_constraintLeft_toRightOf="@id/tv_other_style"
        app:layout_constraintTop_toTopOf="@id/tv_other_style"
        android:layout_marginLeft="15dp"
        />
    <ImageView
        android:id="@+id/iv_wechat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon7"
        app:layout_constraintLeft_toRightOf="@id/iv_qq"
        app:layout_constraintTop_toTopOf="@id/tv_other_style"
        android:layout_marginLeft="15dp"

        />
    <ImageView
        android:id="@+id/iv_weibo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon8"
        app:layout_constraintLeft_toRightOf="@id/iv_wechat"
        app:layout_constraintTop_toTopOf="@id/tv_other_style"

        android:layout_marginLeft="15dp"
        />

</android.support.constraint.ConstraintLayout>
